--- a/www/style.css
+++ b/www/style.css
@@ -461,6 +461,10 @@ h1, h2, h3, h4 {
   box-shadow: inset 0 0 0 1px #e5e5e5;
 }
 
+.content-item img{
+  max-width:100%;
+}
+
 .content-item__index {
   font-family: 'Prata', serif;
   color: #fb8122;
