--- a/www/style.css
+++ b/www/style.css
@@ -349,7 +349,7 @@ template {
 /* markup styles*/
 body {
   background: #f1f1f1;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: 'Roboto Slab', serif;
   font-weight: 100;
 }
 
@@ -364,7 +364,7 @@ body {
 }
 
 h1, h2, h3, h4 {
-  font-family: 'Prata', serif;
+  font-family: 'Source Sans Pro', serif;
   font-weight: normal;
 }
 
@@ -439,7 +439,7 @@ h1, h2, h3, h4 {
   display: block;
   text-decoration: none;
   margin-bottom: 8px;
-  font-family: 'Prata', serif;
+  font-family: 'Source Sans Pro', serif;
   font-size: 16px;
   line-height: 22px;
   cursor: pointer;
@@ -466,7 +466,7 @@ h1, h2, h3, h4 {
 }
 
 .content-item__index {
-  font-family: 'Prata', serif;
+  font-family: 'Source Sans Pro', serif;
   color: #fb8122;
   text-align: center;
 }
